--- a/frontdev/package.json
+++ b/frontdev/package.json
@@ -6,13 +6,7 @@
   "scripts": {
     "start": "webpack-dev-server",
     "clean": "rimraf dist",
-    "production": "cross-env npm run clean && webpack --config webpack.production.config.js --progress --profile --colors",
-    "lint": "eslint ./app/**/**.js",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "coverage": "jest --coverage",
-    "precommit": "cross-env npm run lint && npm test",
-    "prepush": "cross-env npm run lint && npm test"
+    "production": "cross-env npm run clean && webpack --config webpack.production.config.js --progress --profile --colors"
   },
   "author": "Kliment Petrov <kleopetroff@gmail.com>",
   "license": "MIT",
@@ -55,8 +49,6 @@
     "babel-preset-stage-2": "6.24.1",
     "copy-webpack-plugin": "4.3.0",
     "css-loader": "0.28.9",
-    "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.13.0",
     "eslint-config-airbnb": "16.1.0",
     "eslint-loader": "1.9.0",
@@ -64,14 +56,9 @@
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.5.1",
     "extract-text-webpack-plugin": "3.0.2",
-    "file-loader": "1.1.6",
-    "html-webpack-plugin": "2.30.1",
-    "husky": "0.15.0-rc.2",
-    "jest": "22.1.0",
-    "node-sass": "4.7.2",
     "open-browser-webpack-plugin": "0.0.5",
-    "react-addons-test-utils": "15.6.2",
-    "react-test-renderer": "16.2.0",
+    "file-loader": "1.1.6",
+    "node-sass": "4.7.2",
     "rimraf": "2.6.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.19.1",
